Made .panel-body show scrollbars on overflow, fixes #430.

--- a/public/css/solder.css
+++ b/public/css/solder.css
@@ -132,3 +132,7 @@ input[type=file] {
 	border-bottom: none;
 	margin: 0;
 }
+
+.panel-body {
+	overflow: auto;
+}
